feat: add middleware mitra, endpoint add seat availability
